<resources>
    <string name="app_name">MedKit</string>
    <string name="welcome_to_medkit">Welcome to MedKit</string>
    <string name="user_name">User Name</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password</string>
    <string name="sign_in">Sign In</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="_234_235_0000">+234–235–0000</string>
    <string name="verify">Verify</string>
    <string name="_2">2</string>
    <string name="next">Next</string>
    <string name="i_already_have_an_account">I already have an account</string>
</resources>