<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@color/colorWhite">

    <ImageView
        android:id="@+id/logo_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/medkit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/welcome_to_medkit" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_login"
        android:hint="@string/first_name"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:autofillHints="@string/first_name"
        android:inputType="textPersonName"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_name"
        android:hint="@string/last_name"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:autofillHints="@string/first_name"
        android:inputType="textPersonName"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_name"
        android:hint="@string/email"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:autofillHints="@string/first_name"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <EditText
        android:id="@+id/password_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:hint="@string/password"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:autofillHints="@string/first_name"
        android:inputType="textPassword"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <EditText
        android:id="@+id/password_retype"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_create"
        android:hint="@string/re_type_password"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:autofillHints="@string/first_name"
        android:inputType="textPassword"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_retype"
        android:hint="@string/phone_number"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:autofillHints="@string/first_name"
        android:inputType="number|phone"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <Button
        android:id="@+id/sign_in"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/login_bttn"
        android:padding="10dp"
        android:text="@string/sign_in"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:layout_marginTop="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_number" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:padding="6dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:text="@string/sign_in"
        android:layout_marginEnd="90dp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="400dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/another"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in"
        android:contentDescription="@string/first_name" />

    <Button
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:background="@drawable/facebook"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="10dp"/>

    <Button
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="140dp"
        android:background="@drawable/google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>