<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn"
    android:background="@color/colorWhite">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/medkit"
        android:contentDescription="@string/welcome_to_medkit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"/>

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        android:layout_marginTop="40dp"
        android:hint="@string/user_name"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:autofillHints="@string/user_name"
        android:inputType="textPersonName"
        android:layout_margin="20dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:autofillHints="@string/user_name"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:hint="@string/user_name"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name" />

    <CheckBox
        android:id="@+id/remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:textColor="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="@id/password"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:padding="6dp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <Button
        android:id="@+id/sign_in"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/login_bttn"
        android:padding="10dp"
        android:text="@string/sign_in"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="400dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/another"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in" />

    <Button
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:background="@drawable/facebook"
        android:layout_marginStart="125dp"/>

    <Button
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:background="@drawable/google"
        android:layout_marginEnd="125dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>